istio-config/5-permissive-peer-auth-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"                
  namespace: "istio-system"      
spec:
  mtls:
    mode: PERMISSIVE
