istio-config/4-fe-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-app
  namespace: istio-demo
  labels:
    app: fe-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-app
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: fe-app
        version: v1
    spec:
      serviceAccountName: fe-app
      containers:
      - name: fe-app
        image: image-registry.openshift-image-registry.svc:5000/istio-demo/fe-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fe-app
  namespace: istio-demo
spec:
  selector:
    app: fe-app
    version: v1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
