istio-config/6-networking.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-demo-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-demo-fe-app
spec:
  hosts:
  - "*"
  gateways:
  - istio-demo-gateway
  http:
  - route:
    - destination:
        host: fe-app.istio-demo.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-demo-be-app
spec:
  hosts:
  - be-app.istio-demo.svc.cluster.local
  http:
  - route:
    - destination:
        host: be-app.istio-demo.svc.cluster.local
        port:
          number: 8080
